main.tf
resource "aws_launch_template" "web_server_as" {
  name = "Monolithictemplate2"
  image_id = "ami-0d176f79571d18a8f"
  instance_type = "t3.micro"
  key_name = "karthikmumbai1"

  vpc_security_group_ids = [aws_security_group.web_server.id]

  tag_specifications {
    resource_type = "instance"
    tags = {
      Name = "DevOps"
    }
  }
}

resource "aws_elb" "web_server_lb" {
  name               = "web-server-lb"
  security_groups    = [aws_security_group.web_server.id]
  subnets            = ["subnet-0c0db740f69a89471", "subnet-0de6a940154438e27"]

  listener {
    instance_port     = 8000
    instance_protocol = "http"
    lb_port           = 80
    lb_protocol       = "http"
  }

  tags = {
    Name = "terraform-elb"
  }
}

resource "aws_autoscaling_group" "web_server_asg" {
  name                 = "web-server-asg"
  min_size             = 1
  max_size             = 3
  desired_capacity     = 2
  health_check_type    = "EC2"
  load_balancers       = [aws_elb.web_server_lb.name]
  availability_zones   = ["ap-south-1b", "ap-south-1a"]

  launch_template {
    id      = aws_launch_template.web_server_as.id
    version = "$Latest"
  }
}
